<resources>
    <string name="app_name">Sapphire Resort</string>
    <string name="text_enter_login">Please, enter login</string>
    <string name="text_enter_password">Please, enter password</string>
    <string name="text_toolbar_main">sapphire resort</string>
    <string name="text_service_awaits">World-class service awaits!</string>
    <string name="text_who_are_you">Just let us know who are You…</string>
    <string name="empty_login">Empty login field</string>
    <string name="text_button_login">Login</string>
    <string name="welcome_sign_description">Welcome sign picture</string>
    <string name="starting_screen_img_description">Starting screen logo</string>
    <string name="empty_password">Empty password field</string>
    <string name="bottom_menu_guests_admin_main">Guests</string>
    <string name="bottom_menu_restaurant_menu">Menu</string>
    <string name="bottom_menu_services">Services</string>
    <string name="bottom_menu_expenses_user_main">Expenses</string>
    <string name="add_image_desc">add image</string>
    <string name="welcome_admin_phrase">Cheery greetings to our dear admin</string>
    <string name="add_guest_first_name">Guest first name</string>
    <string name="add_guest_last_name">Guest last name</string>
    <string name="add_guest_birth_date">Guest birth date (DD.MM.YYYY)</string>
    <string name="add_guest_phone_number">Guest phone number</string>
    <string name="add_check_in_date">Check in date (DD.MM.YYYY)</string>
    <string name="add_check_out_date">Check out date (DD.MM.YYYY)</string>
    <string name="sum_to_pay">Sum to pay (USD)</string>
    <string name="add_regular_customer">Regular customer</string>
    <string name="add_has_extra_service">Has extra service</string>
    <string name="button_add_text">ADD</string>
    <string name="text_add_guest">Add guest</string>
    <string name="guest_info_text">Guest info</string>
    <string name="update_image_desc">update image</string>
    <string name="delete_image_desc">delete image</string>
    <string name="button_update_text">UPDATE</string>
    <string name="text_update_guest">Update guest</string>
    <string name="meal_info_text">Meal info</string>
    <string name="add_guest_login">Login</string>
    <string name="add_guest_password">Password</string>
    <string name="button_order_text">ORDER</string>
    <string name="add_guest_room_number">Guest room number</string>
</resources>