<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/include_toolbar_login_fragment"
        layout="@layout/toolbar_main" />

    <ImageView
        android:id="@+id/image_welcome"
        android:layout_width="169dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/welcome_sign_description"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar_login_fragment"
        app:srcCompat="@drawable/ic_welcome" />

    <TextView
        android:id="@+id/text_view_service_awaits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/raleway"
        android:text="@string/text_service_awaits"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toTopOf="@+id/text_view_who_are_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_welcome" />

    <TextView
        android:id="@+id/text_view_who_are_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/raleway"
        android:text="@string/text_who_are_you"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_service_awaits" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_who_are_you">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_enter_login"
            android:importantForAutofill="no"
            android:inputType="text"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeWidth="@dimen/input_border_size"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:autofillHints="false"
            android:hint="@string/text_enter_password"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="@dimen/text_size_20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/rounded_corners_primary_dark"
        android:fontFamily="@font/raleway"
        android:text="@string/text_button_login"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_wrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>